--- a/index.html
+++ b/index.html
@@ -162,6 +162,13 @@ Project: <a href='http://corpus.leeds.ac.uk/bogdan/projects/index.html#leverhulm
 Role: Principal Investigator
 </p>
 
+
+<h3>CTS CorpusLabs project: interactive labs for corpus research</h3>
+<p>Web service tools for supporting industrial collaboration, impact and students' research projects:<br>
+<a href="http://corpus.leeds.ac.uk/corpuslabs/">http://corpus.leeds.ac.uk/corpuslabs/</a>
+</p>
+
+
 <h3>Post-graduate research liaison for the Centre of Translation Studies, University of Leeds</h3>
 <p>If you are interested in applying for a PhD or MA by research at the Centre for Translation Studies, University of Leeds, please check my PhD/MRes information page:<br>
 <a href="http://corpus.leeds.ac.uk/bogdan/teaching/pgr/">http://corpus.leeds.ac.uk/bogdan/teaching/pgr/</a>
