--- a/projects/index.html
+++ b/projects/index.html
@@ -164,6 +164,11 @@ researchers, including historians and literary specialists. IntelliText offers a
 interface and be made freely available for research purposes. </p>
 
 
+<h3>CTS CorpusLabs project: interactive labs for corpus research</h3>
+<p>Web service tools for supporting industrial collaboration, impact and students' research projects:<br>
+<a href="http://corpus.leeds.ac.uk/corpuslabs/">http://corpus.leeds.ac.uk/corpuslabs/</a>
+</p>
+
 
 
 <p>&nbsp;</p>
