--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@ Humbox <a href="http://humbox.ac.uk/profile/17">profile</a><br>
 Video of a talk at ACL 2007, Prague: <a href="http://videolectures.net/bogdan_babych/">Assisting Translators in indirect lexical transfer</a>
 </p>
 
+
+<h3>GitHub repositories</h3>
+<p>Projects, corpuslabs, ideas, articles... on GitHub <a href="https://github.com/bogdanbabych">https://github.com/bogdanbabych</a><br>
+
+
+
 </p>
 
 <h3>Sections of this website</h3>
