--- a/publications/index.html
+++ b/publications/index.html
@@ -370,6 +370,12 @@
 <h4>PROGRAMMING</h4>
 <p>Python, Perl, Prolog, Java, JavaScript/HTML/CGI, bash, AWK</p>
 
+<h4>GitHub repositories</h4>
+<p>Projects, corpuslabs, ideas, articles... on GitHub <a href="https://github.com/bogdanbabych">https://github.com/bogdanbabych</a><br>
+
+</p>
+
+
 <h4>LANGUAGES</h4>
 
 <p>English, Ukrainian (native), Spanish, German, Dutch (elementary)</p>
